correction code smell keycloak toList